your update message

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,12 @@
     <img src="logo.png" alt="Company Logo" id="companyLogo" />
   </header>
 
-  <h1> Amml Facility Memos</h1>
+  <h1>Amml Facility Memos</h1>
+
+  <!-- Navigation to Records Page -->
+  <button onclick="window.location.href='records.html'" style="margin-bottom: 20px;">
+    View Market Records
+  </button>
 
   <section>
     <h2>📊 Memo Statistics</h2>
@@ -33,6 +38,7 @@
         <select id="status">
           <option value="Pending">Pending</option>
           <option value="Approved">Approved</option>
+          <option value="Paid">Paid</option>
         </select>
       </label><br /><br />
       <button type="submit">Add Memo</button>
@@ -70,7 +76,7 @@
         memosContainer.appendChild(div);
       });
 
-      // Attach delete handlers
+      // Delete functionality
       document.querySelectorAll('.deleteBtn').forEach(button => {
         button.addEventListener('click', async (e) => {
           const idx = e.target.getAttribute('data-index');
