--- a/frontend/markets.html
+++ b/frontend/markets.html
@@ -2,18 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Market Memo Records</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Memo Counts by Market</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="/style.css" />
+  <style>
+    main {
+      margin-top: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: white;
+      box-shadow: 0 2px 5px rgb(0 0 0 / 0.1);
+    }
+    th, td {
+      padding: 12px 15px;
+      border-bottom: 1px solid #ddd;
+      text-align: left;
+    }
+    th {
+      background-color: #007bff;
+      color: white;
+    }
+    tbody tr:hover {
+      background-color: #f1f1f1;
+    }
+    header nav a {
+      margin-left: 20px;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Market Memo Records</h1>
-    <button onclick="location.href='index.html'">Back to Home</button>
+  <header>
+    <img src="/logo.png" alt="Company Logo" id="companyLogo" />
+    <h1>Memo Counts by Market</h1>
+    <nav>
+      <a href="/">← Back to Dashboard</a>
+    </nav>
+  </header>
 
-    <div id="market-list"></div>
-  </div>
+  <main>
+    <table id="marketsTable" aria-label="Memo counts by market">
+      <thead>
+        <tr>
+          <th>Market</th>
+          <th>Number of Memos</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Market counts will load here -->
+      </tbody>
+    </table>
+  </main>
 
-  <script src="script.js"></script>
+  <script>
+    async function fetchMarketCounts() {
+      try {
+        const response = await fetch('/api/markets');
+        if (!response.ok) {
+          throw new Error('Network response was not ok');
+        }
+        const counts = await response.json();
+
+        const tbody = document.querySelector('#marketsTable tbody');
+        tbody.innerHTML = '';
+
+        for (const [market, count] of Object.entries(counts)) {
+          const row = document.createElement('tr');
+          row.innerHTML = `<td>${market}</td><td>${count}</td>`;
+          tbody.appendChild(row);
+        }
+      } catch (error) {
+        console.error('Failed to fetch market counts:', error);
+        const tbody = document.querySelector('#marketsTable tbody');
+        tbody.innerHTML = `<tr><td colspan="2" style="color:red;">Failed to load data.</td></tr>`;
+      }
+    }
+
+    fetchMarketCounts();
+  </script>
 </body>
 </html>
