--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <img src="logo.png" alt="Company Logo" id="companyLogo" />
   </header>
 
-  <h1>📄 Company Memo Dashboard</h1>
+  <h1> AMML Memo Dashboard</h1>
 
   <section>
     <h2>📊 Memo Statistics</h2>
