--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,13 +13,18 @@
     <img src="logo.png" alt="Company Logo" id="companyLogo" />
   </header>
 
-  <h1> AMML Memo Dashboard</h1>
+  <h1>AMML Memo Dashboard</h1>
 
   <section>
-    <h2>📊 Memo Statistics</h2>
+    <h2>📊 Overall Memo Statistics</h2>
     <p>Total Memos: <span id="total">0</span></p>
     <p>Pending: <span id="pending">0</span></p>
     <p>Approved: <span id="approved">0</span></p>
+  </section>
+
+  <section>
+    <h2>📍 Memo Statistics by Market</h2>
+    <div id="marketStats"></div>
   </section>
 
   <section>
@@ -37,7 +42,7 @@
       </label><br /><br />
       <label>Market:<br />
         <select id="market" required>
-          <option value="">--Select Market--</option>
+          <option value="">-- Select Market --</option>
           <option>Apo ZoneA</option>
           <option>Area1 shopping complex</option>
           <option>Area 2 shopping complex</option>
@@ -64,44 +69,154 @@
     <div id="memosContainer"></div>
   </section>
 
-  <section>
-    <a href="markets.html" class="nav-btn">View Memos by Market →</a>
-  </section>
-
   <script>
     const form = document.getElementById('memoForm');
     const memosContainer = document.getElementById('memosContainer');
+    const marketStatsDiv = document.getElementById('marketStats');
+
+    // List of markets (for stats display and form select)
+    const markets = [
+      "Apo ZoneA",
+      "Area1 shopping complex",
+      "Area 2 shopping complex",
+      "Area 10 market",
+      "Area 3 market",
+      "Dei Dei Markets",
+      "Garki International Market",
+      "Garki Model Market",
+      "Gudu Market",
+      "Head Office",
+      "Kado Fish Market",
+      "Kaura Market",
+      "Maitama Farmers Market",
+      "Wuse Market",
+      "Zone 3 neighnourhood center"
+    ];
 
     async function loadMemos() {
       const response = await fetch('/api/memos');
       const memos = await response.json();
 
+      // Overall stats
       document.getElementById('total').textContent = memos.length;
       document.getElementById('pending').textContent = memos.filter(m => m.status === 'Pending').length;
       document.getElementById('approved').textContent = memos.filter(m => m.status === 'Approved').length;
 
+      // Market stats
+      let statsHtml = '<table><thead><tr><th>Market</th><th>Total</th><th>Approved</th><th>Pending</th></tr></thead><tbody>';
+
+      markets.forEach(market => {
+        const marketMemos = memos.filter(m => m.market === market);
+        const total = marketMemos.length;
+        const approved = marketMemos.filter(m => m.status === 'Approved').length;
+        const pending = marketMemos.filter(m => m.status === 'Pending').length;
+
+        statsHtml += `
+          <tr>
+            <td>${market}</td>
+            <td>${total}</td>
+            <td>${approved}</td>
+            <td>${pending}</td>
+          </tr>
+        `;
+      });
+
+      statsHtml += '</tbody></table>';
+      marketStatsDiv.innerHTML = statsHtml;
+
+      // Display all memos
       memosContainer.innerHTML = '';
 
       memos.forEach((memo, index) => {
         const div = document.createElement('div');
         div.className = 'memo';
+
         div.innerHTML = `
           <strong>${memo.title}</strong> <em>(${memo.status})</em><br>
-          <small>${memo.date} ${memo.time} | Market: ${memo.market}</small>
+          <small>${memo.date} ${memo.time} | <strong>Market:</strong> ${memo.market}</small>
           <p>${memo.description}</p>
+          <button class="editBtn" data-index="${index}">Edit</button>
           <button class="deleteBtn" data-index="${index}">Delete</button>
+          <div class="editFormContainer" style="display:none; margin-top:10px;">
+            <form class="editForm" data-index="${index}">
+              <label>Title:<br /><input type="text" name="title" value="${memo.title}" required /></label><br /><br />
+              <label>Description:<br /><textarea name="description" required>${memo.description}</textarea></label><br /><br />
+              <label>Date:<br /><input type="date" name="date" value="${memo.date}" required /></label><br /><br />
+              <label>Time:<br /><input type="time" name="time" value="${memo.time}" required /></label><br /><br />
+              <label>Status:<br />
+                <select name="status" required>
+                  <option value="Pending" ${memo.status === 'Pending' ? 'selected' : ''}>Pending</option>
+                  <option value="Approved" ${memo.status === 'Approved' ? 'selected' : ''}>Approved</option>
+                </select>
+              </label><br /><br />
+              <label>Market:<br />
+                <select name="market" required>
+                  ${markets.map(m => `<option value="${m}" ${memo.market === m ? 'selected' : ''}>${m}</option>`).join('')}
+                </select>
+              </label><br /><br />
+              <button type="submit">Save</button>
+              <button type="button" class="cancelEditBtn">Cancel</button>
+            </form>
+          </div>
         `;
+
         memosContainer.appendChild(div);
       });
 
-      // Attach delete handlers
+      // Delete buttons
       document.querySelectorAll('.deleteBtn').forEach(button => {
-        button.addEventListener('click', async (e) => {
-          const idx = e.target.getAttribute('data-index');
+        button.addEventListener('click', async e => {
+          const index = e.target.getAttribute('data-index');
           if (confirm('Are you sure you want to delete this memo?')) {
-            await fetch(`/api/memos/${idx}`, { method: 'DELETE' });
+            await fetch(`/api/memos/${index}`, { method: 'DELETE' });
             loadMemos();
           }
+        });
+      });
+
+      // Edit buttons
+      document.querySelectorAll('.editBtn').forEach(button => {
+        button.addEventListener('click', e => {
+          const parentDiv = e.target.parentElement;
+          parentDiv.querySelector('.editFormContainer').style.display = 'block';
+        });
+      });
+
+      // Cancel edit buttons
+      document.querySelectorAll('.cancelEditBtn').forEach(button => {
+        button.addEventListener('click', e => {
+          const formContainer = e.target.closest('.editFormContainer');
+          formContainer.style.display = 'none';
+        });
+      });
+
+      // Submit edit forms
+      document.querySelectorAll('.editForm').forEach(form => {
+        form.addEventListener('submit', async e => {
+          e.preventDefault();
+          const index = e.target.getAttribute('data-index');
+          const formData = new FormData(e.target);
+          const updatedMemo = {
+            title: formData.get('title').trim(),
+            description: formData.get('description').trim(),
+            date: formData.get('date'),
+            time: formData.get('time'),
+            status: formData.get('status'),
+            market: formData.get('market')
+          };
+
+          if (!updatedMemo.title || !updatedMemo.description || !updatedMemo.date || !updatedMemo.time || !updatedMemo.status || !updatedMemo.market) {
+            alert('Please fill all fields');
+            return;
+          }
+
+          await fetch(`/api/memos/${index}`, {
+            method: 'PUT',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(updatedMemo)
+          });
+
+          loadMemos();
         });
       });
     }
@@ -117,7 +232,10 @@
         market: document.getElementById('market').value
       };
 
-      if (!newMemo.title || !newMemo.description || !newMemo.date || !newMemo.time || !newMemo.market) return alert('Please fill all fields!');
+      if (!newMemo.title || !newMemo.description || !newMemo.date || !newMemo.time || !newMemo.market) {
+        alert("Please fill all fields including market.");
+        return;
+      }
 
       await fetch('/api/memos', {
         method: 'POST',
