your update message

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,7 +100,7 @@
       </section>
 
       <section class="card memos-list">
-        <h2>📁 All Memos (sorted by memo date — newest first)</h2>
+        <h2>📁 All Memos </h2>
         <div id="memosContainer"></div>
       </section>
     </main>
