your update message

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
   <div class="page">
     <header>
       <img src="logo.png" id="companyLogo" alt="Company Logo" />
-      <h1>📄 Company Memo Dashboard</h1>
+      <h1> AMML Memo Dashboard</h1>
     </header>
 
     <main>
